<resources>
    <string name="app_name">AlbuquerqueBus</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="bus_icon">Bus Icon</string>
    <string name="walk_icon">Walk Icon</string>
    <string name="bicycle_icon">Bicycle Icon</string>
    <string name="estimated_time">ET</string>
    <string name="sample_estimated_time">10 Min</string>
    <string name="directions_icon">Directions Icon</string>
    <string name="directions">Directions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="sample_text">sample Text</string>
    <string name="transitmode">TransitMode</string>
    <string name="sample_bus_number">66</string>
    <string name="sample_time">6:59pm</string>
    <string name="close">Close</string>
    <string name="sample_extra_time">(+2)</string>
    <string name="depart">Depart : </string>
    <string name="arrive">Arrive : </string>
    <string name="trip_completed">Trip Completed</string>
</resources>
