<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="4dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/bus_icon"
        android:src="@drawable/ic_action_directions_bus"/>

    <TextView
        android:id="@+id/bus_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/sample_bus_number"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/bus_timing"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sample_time"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/bus_extra_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sample_extra_time"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"/>
    </LinearLayout>

</LinearLayout>