<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">


    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/card_view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:background="@android:color/white"
                                        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/directions_button_layout"
                    android:layout_toStartOf="@+id/directions_button_layout"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <HorizontalScrollView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:scrollbars="none">

                        <TextView
                            android:id="@+id/destination_text"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:maxLines="1"
                            android:padding="4dp"
                            android:scrollHorizontally="true"

                            android:text="This is sample text"
                            android:textSize="20sp"/>
                    </HorizontalScrollView>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/directions_button_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="4dp"
                    android:background="@android:color/black"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/directions_icon"
                        android:src="@drawable/ic_directions_white_48dp"/>

                    <TextView
                        android:id="@+id/directions"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="@string/directions"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"/>


                </LinearLayout>

            </RelativeLayout>


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/bus_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="horizontal">


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/walk_icon"
                            android:src="@android:drawable/ic_menu_search"/>

                        <TextView
                            android:id="@+id/walk_time"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="66"
                            android:textAlignment="center"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/bicycle_icon"
                            android:src="@android:drawable/ic_menu_search"/>

                        <TextView
                            android:id="@+id/bicycle_time"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="66"
                            android:textAlignment="center"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/estimated_time"
                            android:textAlignment="center"/>

                        <TextView
                            android:id="@+id/expected_time"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/sample_estimated_time"
                            android:textAlignment="center"/>


                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>